[package]
name = "cornfig"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "A simple and pain-free configuration language."
repository = "https://github.com/JakeStanger/corn"
keywords = ["configuration", "language", "wasm", "pest", "peg", "grammar"]

[features]
wasm = ["wasm-bindgen", "console_error_panic_hook", "wee_alloc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pest = "2.3.0"
pest_derive = "2.3.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
serde_yaml = "0.9.11"
colored = "2.0.0"
clap = { version = "3.0.11", features = ["derive"] }
toml = "0.5.9"
cfg-if = "1.0.0"
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
paste = "1.0.6"
wasm-bindgen-test = { version = "0.3.29" }