[package]
name = "corn-cli"
version = "0.10.0"
edition = "2021"
license = "MIT"
description = "CLI for Corn, A simple and pain-free configuration language."
repository = "https://github.com/JakeStanger/corn"
categories = ["config"]
keywords = ["configuration", "language", "pest", "peg", "cli"]

[dependencies]
libcorn = { version = "*", path = "../libcorn" }
clap = { version = "4.5.16", features = ["derive"] }
colored = "2.1.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde_yaml = "0.9.34"
toml_edit = {  version = "0.22.20", features = ["serde"] }
pest = "2.7.11"
